[package]
name = "wrpc-transport-nats"
version = "0.28.0"
description = "wRPC NATS transport"

authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["async-nats-0_39"]

[dependencies]
anyhow = { workspace = true, features = ["std"] }
async-nats-0_39 = { package = "async-nats", version = "0.39", default-features = false, features = [
    "ring",
], optional = true }
async-nats-0_38 = { package = "async-nats", version = "0.38", default-features = false, features = [
    "ring",
], optional = true }
async-nats-0_37 = { package = "async-nats", version = "0.37", default-features = false, features = [
    "ring",
], optional = true }
async-nats-0_36 = { package = "async-nats", version = "0.36", default-features = false, features = [
    "ring",
], optional = true }
bytes = { workspace = true }
futures = { workspace = true, features = ["async-await"] }
nuid = { workspace = true }
tokio = { workspace = true, features = ["io-util", "rt-multi-thread"] }
tokio-stream = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true, features = ["codec", "io"] }
tracing = { workspace = true, features = ["attributes"] }
wasm-tokio = { workspace = true }
wrpc-transport = { workspace = true }
