[package]
name = "wrpc-transport-quic"
version = "0.5.0"
description = "wRPC QUIC transport"

authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true, features = ["std"] }
bytes = { workspace = true }
quinn = { workspace = true, features = ["runtime-tokio"] }
tracing = { workspace = true }
wrpc-transport = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
test-log = { workspace = true, features = ["color", "log", "trace"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
wrpc-test = { workspace = true, features = ["quic"] }
