[package]
name = "wrpc-transport-web"
version = "0.1.0"
description = "wRPC WebTransport transport"

authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true, features = ["std"] }
bytes = { workspace = true }
tracing = { workspace = true }
web-transport-quinn = { workspace = true }
wrpc-transport = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
test-log = { workspace = true, features = ["color", "log", "trace"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
wrpc-test = { workspace = true, features = ["web-transport"] }
