[package]
name = "wrpc-transport"
version = "0.27.2"
description = "wRPC core transport functionality"

authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["fs", "net", "io-std"]
frame = [] # TODO: Remove in 0.28
fs = ["tokio/fs"]
net = ["tokio/net"]
io-std = ["tokio/io-std"]

[dependencies]
anyhow = { workspace = true, features = ["std"] }
bytes = { workspace = true }
futures = { workspace = true, features = ["std"] }
pin-project-lite = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "time"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true, features = ["codec", "io"] }
tracing = { workspace = true, features = ["attributes"] }
send-future = { workspace = true }
wasm-tokio = { workspace = true, features = ["tracing"] }

[dev-dependencies]
test-log = { workspace = true, features = ["color", "log", "trace"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
