[package]
name = "wrpc-types"
version = "0.2.0"
edition = "2021"
description = "wRPC type system"
authors = ["Roman Volosatovs <rvolosatovs@riseup.net>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rvolosatovs/wrpc"

[dependencies]
anyhow = { workspace = true, features = ["std"] }
tracing = { workspace = true, features = ["attributes"] }
wit-parser = { workspace = true }
