[package]
name = "wrpc-types"
version = "0.6.0"
description = "wRPC type system"

authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true, features = ["std"] }
serde = { workspace = true, features = ["derive", "rc"], optional = true }
tracing = { workspace = true, features = ["attributes"] }
wit-parser = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true, features = ["alloc"] }
