[package]
name = "wrpc-wasi-keyvalue-mem"
version = "0.2.0"
description = "In-memory implementation of wRPC `wasi:keyvalue` handler"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true, features = ["std"] }
bytes = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
wrpc-transport = { workspace = true }
wrpc-wasi-keyvalue = { workspace = true }
