[package]
name = "wrpc-wasi-keyvalue-redis"
version = "0.2.0"
description = "Redis implementation of wRPC `wasi:keyvalue` handler"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true, features = ["std"] }
bytes = { workspace = true }
futures = { workspace = true }
redis = { workspace = true, features = [
    "aio",
    "bytes",
    "connection-manager",
    "tokio-comp",
] }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["std", "v7"] }
wrpc-transport = { workspace = true }
wrpc-wasi-keyvalue = { workspace = true }
