[package]
name = "wrpc-wasmtime-nats-cli"
version = "0.10.0"
description = "wRPC Wasmtime NATS CLI"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
clap = { workspace = true, features = [
    "color",
    "derive",
    "error-context",
    "help",
    "std",
    "suggestions",
    "usage",
] }
futures = { workspace = true }
humantime = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
tokio-util = { workspace = true, features = ["codec"] }
tracing = { workspace = true, features = ["attributes"] }
tracing-subscriber = { workspace = true, features = [
    "ansi",
    "env-filter",
    "fmt",
] }
url = { workspace = true }
wasi-preview1-component-adapter-provider = { workspace = true }
wasmparser = { workspace = true }
wasmtime = { workspace = true, features = [
    "addr2line",
    "async",
    "cache",
    "coredump",
    "cranelift",
    "demangle",
    "gc",
    "parallel-compilation",
    "runtime",
    "threads",
    "wat",
] }
wasmtime-wasi = { workspace = true }
wasm-tokio = { workspace = true }
wit-bindgen-wrpc = { workspace = true }
wit-component = { workspace = true }
wit-parser = { workspace = true }
wrpc-cli = { workspace = true, features = ["nats"] }
wrpc-introspect = { workspace = true }
wrpc-transport-nats = { workspace = true }
wrpc-transport = { workspace = true }
wrpc-runtime-wasmtime = { workspace = true }
