[package]
name = "wit-bindgen-wrpc-go"
version = "0.2.0"
description = """
Go bindings generator for wRPC
"""

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lib]
test = false
doctest = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"], optional = true }
heck = { workspace = true }
wit-bindgen-core = { workspace = true }
wrpc-introspect = { workspace = true }

[dev-dependencies]
test-helpers = { workspace = true }
