[package]
name = "wit-bindgen-wrpc-rust-macro"
version = "0.4.0"
description = """
Procedural macro paired with the `wit-bindgen-wrpc` crate.
"""
authors = [
    "Roman Volosatovs <rvolosatovs@riseup.net>",
    "Alex Crichton <alex@alexcrichton.com>",
]

categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true
doctest = false
test = false

[dependencies]
anyhow = { workspace = true }
prettyplease = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["printing"] }
wit-bindgen-core = { workspace = true }
wit-bindgen-wrpc-rust = { workspace = true }
